style.css
body {
  padding: 0;
  margin: 0;
  background: lightblue;
  font-family: monospace;
}

table {
  display: flex;
  flex-direction: column;
  /* height: 90vw;
  width: 90vw;
  max-width: 100vh;
  max-height: 100vh; */
  background: radial-gradient(beige, wheat);
  transform: scale(.5) scaleY(.5) skew(45deg, -45deg);
  box-shadow: 0 0 0 1vw white, -8vw 8vw 0px 0 rgba(0,0,0,0.4), -12vw 12vw 16vw 10vw rgba(0,0,0,0.2);
  border-radius: 1vh;
  outline: solid 0.6vw tan;
  outline-offset: -0.3vw;
  transition: 3s;
}

tr {
  flex-grow: 1;
  display: flex;
}

td {
  outline: solid 2px tan;
  outline-offset: -1px;
  flex-grow: 1;
}

td > div {
  height: 100%;
  width: 100%;
  margin: 0 auto;
  transform: skew(45deg, -45deg) scaleX(2);
}

td:has(.player) {
  background: radial-gradient(rgba(0,0,0,0.3), transparent 50%);
  outline: solid 1vh darksalmon;
  outline-offset: -2vw;
  border-radius: 30%;
  animation-name: idle-shadow;
  animation-duration: 4s;
  animation-iteration-count: infinite;
  border: none;
}

td:has(.place) {
  background: radial-gradient(white 5%, rgba(255,255,255,0.3) 28%, transparent 70%);
  border: none;
}

.board-container {
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
}

.player, .place {
  position: relative;
}

.player {
  background: radial-gradient(lightgray 20%, darkgrey 58%, white);
  border-radius: 50%;
  outline: solid 0.3vw slategray;
  outline-offset: -.3vw;
  transform: skew(45deg, -45deg) scaleX(1) translateX(70%);
  /* box-shadow: 0 0 1vw 0.25vw green, 0.5vw 0px 3vw 4vw rgba(255,255,255,.3); */
  animation-name: idle !important;
  animation-duration: 4s;
  animation-iteration-count: infinite;
  mix-blend-mode: darken;
}

.board-container.flat {
  overflow: hidden;
  transition: 3s;
}

.flat table {
  transform: scale(.8) scaleY(1) skew(0deg);
  scale: .8;
  transition: 3s;
  box-shadow: 0 0 0 1vw white, -4vw 4vw 0px 0 rgba(0,0,0,0.4), -12vw 12vw 16vw 10vw rgba(0,0,0,0.2);
  transition: 3s;
}

.flat .player {
  animation-name: idle-flat !important;
}

.flat .place {
  animation-name: place-idle-flat;
}

.flat .l-wall {
  transform: skewX(-26.5deg) scaleX(0);
  right: 12.5%;
  transition: 3s;
}

.flat .r-wall {
  transform: skewX(26.5deg) scaleX(0);
  right: 12.5%;
  transition: 3s;
}

.flat .ceiling-box {
  z-index: 1;
  top: 0;
  right: 50%;
  /* box-shadow: -2.5vw 2.5vw 3vw 0 rgba(0,0,0,.3); */
  /* transition: box-shadow .5s 1.75s, top 3s, right 3s; */
  transition: 3s;
}

.flat .blocked {
  box-shadow: -15px 15px 2vw 0vw rgba(0,0,0,.3);
  transform: scale(.8);
  transition: 3s;
}

.flat .bubble {
  bottom: 60%;
  right: -90px;
  transform: rotate(45deg) scale(3) translateX(50%);
}

@keyframes hide-and-show {
  0% {opacity: 1;}
  50% {opacity: 0;}
  100% {opacity:1;}
}


@keyframes idle {
  0% {transform: skew(45deg, -45deg) scale(.5) scaleX(2) translateX(70%);}
  50% {transform: skew(45deg, -45deg) scale(.5) scaleX(2) translateX(60%);}
  100% {transform: skew(45deg, -45deg) scale(.5) scaleX(2) translateX(70%);}
}

@keyframes idle-flat {
  0% {transform: skew(45deg, -45deg) scale(.45);}
  50% {transform: skew(45deg, -45deg) scale(.5);}
  100% {transform: skew(45deg, -45deg) scale(.45);}
}

@keyframes idle-shadow {
  0% {background: radial-gradient(rgba(222,184,135,0), transparent 50%)}
  5% {background: radial-gradient(rgba(222,184,135,0.1), transparent 50%)}
  10% {background: radial-gradient(rgba(222,184,135,0.2), transparent 50%)}
  15% {background: radial-gradient(rgba(222,184,135,0.3), transparent 50%)}
  20% {background: radial-gradient(rgba(222,184,135,0.4), transparent 50%)}
  25% {background: radial-gradient(rgba(222,184,135,0.5), transparent 50%)}
  30% {background: radial-gradient(rgba(222,184,135,0.6), transparent 50%)}
  35% {background: radial-gradient(rgba(222,184,135,0.7), transparent 50%)}
  40% {background: radial-gradient(rgba(222,184,135,0.8), transparent 50%)}
  45% {background: radial-gradient(rgba(222,184,135,0.9), transparent 50%)}
  50% {background: radial-gradient(rgba(222,184,135,1), transparent 50%)}
  55% {background: radial-gradient(rgba(222,184,135,.9), transparent 50%)}
  60% {background: radial-gradient(rgba(222,184,135,0.8), transparent 50%)}
  65% {background: radial-gradient(rgba(222,184,135,0.7), transparent 50%)}
  70% {background: radial-gradient(rgba(222,184,135,0.6), transparent 50%)}
  75% {background: radial-gradient(rgba(222,184,135,0.5), transparent 50%)}
  80% {background: radial-gradient(rgba(222,184,135,0.4), transparent 50%)}
  85% {background: radial-gradient(rgba(222,184,135,0.3), transparent 50%)}
  90% {background: radial-gradient(rgba(222,184,135,0.2), transparent 50%)}
  95% {background: radial-gradient(rgba(222,184,135,0.1), transparent 50%)}
  100% {background: radial-gradient(rgba(222,184,135,0), transparent 50%)}
}

.place {
  border-radius: 50%;
  background: white;
  box-shadow: 0 0 0 8px yellow, -6px 0px 20px 16px gold;
  transform: skew(45deg, -45deg) scale(.4) translateX(150%);
  animation-name: place-idle;
  animation-duration: 4s;
  animation-iteration-count: infinite;
}

@keyframes place-idle {
  0% {transform: skew(45deg, -45deg) scaleX(2) scale(.2) translateX(150%);}
  50% {transform: skew(45deg, -45deg) scaleX(2) scale(.15) translateX(150%);}
  100% {transform: skew(45deg, -45deg) scaleX(2) scale(.2) translateX(150%);}
}

@keyframes place-idle-flat {
  0% {transform: skew(45deg, -45deg) scale(.2);}
  50% {transform: skew(45deg, -45deg) scale(.15);}
  100% {transform: skew(45deg, -45deg) scale(.2);}
}

.place.player {
  box-shadow: 0 0 4vw 1vw greenyellow;
  mix-blend-mode: normal;
  outline-color: olivedrab;
}

.player.place {
  background: radial-gradient(yellow 20%, yellowgreen 58%, white);
}

td:has(.place.player) {
  outline: solid 0 transparent;
  transition: .3s;
}

.flat td:has(.place.player) { z-index: 1; }

.bubble {
  position: absolute;
  display: none;
  bottom: 25%;
  right: -135px;
  transform: rotate(90deg) scale(3) translateX(50%);
  background: white;
  box-shadow: -6px 6px 0px -1px rgba(0,0,0,0.3);
  border-radius: 12px 12px 12px 0px;
  padding: 8px 16px;
}

.place.player .bubble {
  display: block;
}

.blocked {
  position: relative;
  transform: scale(.8) translate(5vw, -5vw);
  border-radius: 50%;
  background: radial-gradient(teal 50%, dimgray 50%);
  box-shadow:
  -2.5vw 2.5vw 0px -2vw lightgray,
  -4vw 4vw 0px -3vw darkgray,
  -6vw 6vw 0px -4vw dimgray,
  -6vw 6vw 2vw -2vw rgba(0,0,0, 0.6),
  -5vw 5vw 2vw 0 burlywood;
  transition: 3s;
}

td:has(.blocked) {
  /* background: radial-gradient(black, transparent 70%); */
}

.box {
  position: relative;
  display: flex;
  flex-direction: column;
  height: 100%;
  width: 100%;
  transition: 3s;
}

.l-wall {
  position: relative;
  flex-grow: 1;
  background: aliceblue;
  right: -12.5%;
  transform: skewX(-26.5deg) scaleX(.5);
  outline: solid 0.2vw aliceblue;
  outline-offset: -0.1vw;
  border-radius: 0.1vw;
  transition: 3s;
}

.r-wall {
  position: relative;
  flex-grow: 1;
  background: powderblue;
  right: -12.5%;
  transform: skewX(26.5deg) scaleX(.5);
  outline: solid 0.2vw aliceblue;
  outline-offset: -0.1vw;
  border-radius: 0.1vw;
  transition: 3s;
}

.ceiling-box {
  position: absolute;
  transform: translateX(50%);
  top: -99%;
  right: -49%;
  background: white;
  outline: solid 0.4vw aliceblue;
  outline-offset: -0.2vw;
  border-radius: 0.6vw;
  transition: 3s;
}

td:has(.box) {
  position: relative;
  outline: solid .3vw aliceblue;
  outline-offset: -.2vw;
  border-radius: 0.1vw;
  box-shadow: -1vw 1vw 3vw 1vw rgba(0,0,0,.2);
}

td:has(.carpet) {
  position: relative;
}

.carpet {
  top: 0;
  position: absolute;
  transform: revert;
  background: orange;
  mix-blend-mode: color-burn;
}

.mode {
  z-index: 999;
  position: fixed;
  top: 0;
  right: 5vw;
  font-family: inherit;
  color: white;
  font-weight: 900;
  font-size: 2vw;
  width: 8vw;
  height: 8vw;
  transition: transform 3s;
}

.box-side-container {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.box-left-btn, .box-right-btn {
  flex-grow: 1;
  width: 4vw;
  height: 4vw;
  display: flex;
  align-items: center;
  justify-content: center;
  outline: solid 0.4vw lightblue;
  outline-offset: -.2vw;
  border-radius: 1vw;
}

.box-left-btn {
  transform: skewY(30deg);
  background: lightgray;
  cursor: pointer !important;
  position: relative;
  left: 0;
  transition: 3s;
}

.box-right-btn {
  z-index: 1;
  transform: skewY(-30deg);
  background: dimgray;
  cursor: pointer !important;
  transition: 3s;
}

.box-top-btn {
  width: 4.5vw;
  height: 4.5vw;
  position: relative;
  margin: 0 auto;
  top: 1vw;
  transform: rotate(-45deg) skew(15deg, 15deg);
  background: white;
  cursor: pointer !important;
  outline: solid 0.4vw lightblue;
  outline-offset: -.2vw;
  border-radius: 1vw;
  transition: 3s;
}

.flat .box-left-btn {
  transition: 3s, height 2s .2s;
  width: 0;
  height: 7.8vw;
}

.flat .box-right-btn {
  transform: none;
  transition: 3s;
  width: 8vw;
  height: 8vw;
}

.flat .box-top-btn {
  transform: skewX(45deg) scaleY(0.001);
  width: 8vw;
  transition: 3s;
  margin: 0 auto;
  top: 2.3vw;
  position: relative;
}

.flat.mode {
  transform: scale(.7);
  font-size: 5vw;
  transition: transform 3s;
}

.input-container {
  display: inline-grid;
  gap: 1vw;
  position: fixed;
  top: 2vw;
  left: 2vw;
}

.input-container input {
  width: 5vw;
}

